cmake_minimum_required (VERSION 2.8)
IF (WIN32)
	MESSAGE(STATUS "Now is windows")
ELSEIF (APPLE)
	MESSAGE(STATUS "Now is Apple systens.")
ELSEIF (UNIX)
	MESSAGE(STATUS "Now is UNIX-like OS's. Including aPPLE os x  and CygWin")
ENDIF ()
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
project (wabasm)
#subdirectories
option(BUILD_VOS "build the vos" ON)
if(BUILD_VOS)
add_subdirectory(os)
add_definitions(-DVOS_EN)
endif()
add_subdirectory(vm)
add_subdirectory(extlibs)