cmake_minimum_required (VERSION 2.8)
aux_source_directory (. VOS_LIST)
include_directories (../include)
set(VTIMER_AMOUNT 500)
option(VOS_LESS_VTIMER "to have less vtimers,adviced in embebed systems" OFF)
if(VOS_LESS_VTIMER)
set(VTIMER_AMOUNT 50)
endif()
message(STATUS "vos has " ${VTIMER_AMOUNT} " virtual timers")
if(BUILD_VOS)
add_library (vos_shared SHARED ${VOS_LIST})
add_library (vos_static STATIC ${VOS_LIST})
add_compile_options(-std=c++11 -Wall -g) 
set_target_properties (vos_shared PROPERTIES OUTPUT_NAME "voslib")
set_target_properties (vos_static PROPERTIES OUTPUT_NAME "voslib")
set (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/libbin)
endif()
option(VOS_POSIX_RT "build the vos with posix's real time" ON)
if(VOS_POSIX_RT)
message(STATUS "generate vos with posix real time")
add_definitions(-DVOS_POSIX_RT)
target_link_libraries(vos_shared rt pthread)
target_link_libraries(vos_static rt pthread)
endif()
configure_file(
        "osconfig.h.in"
        "${PROJECT_SOURCE_DIR}/include/osconfig.h"
)