#switch driver
IF (WIN32)
	set(RUN_PLATFORM "win32")
ELSEIF (APPLE)
        set(RUN_PLATFORM "apple")
ELSEIF (UNIX)
        set(RUN_PLATFORM "unix")
        aux_source_directory (${PROJECT_SOURCE_DIR}/src/drv/unix/ LOW_DRV)
        include_directories  (${PROJECT_SOURCE_DIR}/src/drv/unix/)
ENDIF ()
add_compile_options(-std=c++11 -Wall -g) 
#config the src
aux_source_directory (${PROJECT_SOURCE_DIR}/src/net/ NET_LIST)
aux_source_directory (${PROJECT_SOURCE_DIR}/src/vm/ VM_LIST)
aux_source_directory (${PROJECT_SOURCE_DIR}/src/os/ OS_LIST)
aux_source_directory (${PROJECT_SOURCE_DIR}/src/group/ GR_LIST)
#set(CMAKE_C_COMPILER "gcc")
#set(CMAKE_CXX_COMPILER "g++")
include_directories  (${PROJECT_SOURCE_DIR}/include)
option(VM_AS_LIB "build vm as lib,default as exe" OFF)
if(VM_AS_LIB)
set(VM_IS_LIB 1)
add_definitions(-DVM_NOMAIN)
add_library (VML_shared SHARED  ${NET_LIST} ${OS_LIST} ${VM_LIST} ${LOW_DRV} ${GR_LIST})
add_library (VML_static STATIC  ${NET_LIST} ${OS_LIST} ${VM_LIST} ${LOW_DRV} ${GR_LIST})
set_target_properties (VML_shared PROPERTIES OUTPUT_NAME "wasmvmlib")
set_target_properties (VML_static PROPERTIES OUTPUT_NAME "wasmvmlib")
set (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/libbin)
target_link_libraries(VML_shared m rt pthread)
target_link_libraries(VML_static m rt pthread)
message(STATUS "vm will be a lib")
else()
set(VM_IS_LIB 0)
add_executable (webasm ${NET_LIST} ${OS_LIST} ${VM_LIST} ${LOW_DRV} ${GR_LIST})
target_link_libraries(webasm m rt pthread)
endif()
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
add_subdirectory(os)
add_subdirectory(vm)
add_subdirectory(net)

